--- a/render.yaml
+++ b/render.yaml
@@ -1,11 +1,42 @@
 services:
   - type: web
-    name: medi-book-web
-    runtime: node
-    region: oregon
+    name: medibook-klecha-api
+    runtime: docker
+    region: virginia
     plan: starter
-    buildCommand: npm install && npm run build
-    startCommand: npx serve -s dist -l 3000 --single
+    dockerfilePath: ./Dockerfile
+    healthCheckPath: /actuator/health
     envVars:
-      - key: VITE_API_BASE_URL
-        value: https://medi-book-api.onrender.com  # Update this with your actual backend URL after deployment
+      - key: DB_HOST
+        fromDatabase:
+          name: medibook-klecha-db
+          property: host
+      - key: DB_PORT
+        fromDatabase:
+          name: medibook-klecha-db
+          property: port
+      - key: DB_NAME
+        fromDatabase:
+          name: medibook-klecha-db
+          property: database
+      - key: DB_USERNAME
+        fromDatabase:
+          name: medibook-klecha-db
+          property: username
+      - key: DB_PASSWORD
+        fromDatabase:
+          name: medibook-klecha-db
+          property: password
+      - key: CORS_ALLOWED_ORIGINS
+        value: https://medibook-klecha.onrender.com
+      - key: ADMIN_USERNAME
+        generateValue: true
+      - key: ADMIN_PASSWORD
+        generateValue: true
+
+databases:
+  - name: medibook-klecha-db
+    databaseName: medibook_klecha_db
+    user: medibook_klecha_db_user
+    region: virginia
+    plan: starter
