--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 services:
   - type: web
-    name: medi-book-web
+    name: medibook-klecha
     runtime: node
-    region: oregon
+    region: virginia
     plan: starter
     buildCommand: npm install && npm run build
     startCommand: npx serve -s dist -l 3000 --single
