--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     region: virginia
     plan: starter
     buildCommand: npm install && npm run build
-    startCommand: npx serve -s dist -l 3000 --single
+    startCommand: npx serve@latest -s dist -p $PORT -n
     envVars:
       - key: VITE_API_BASE_URL
         value: https://medibook-klecha-api.onrender.com  # Update this with your actual backend URL after deployment
